--- a/themes/simpel/layouts/partials/head.html
+++ b/themes/simpel/layouts/partials/head.html
@@ -3,3 +3,4 @@
 <title>{{ site.Title }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
