--- a/themes/simpel/layouts/partials/head.html
+++ b/themes/simpel/layouts/partials/head.html
@@ -1,6 +1,5 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>{{ site.Title }}</title>
-{{ partialCached "head/css.html" . }}
-{{ partialCached "head/js.html" . }}
+<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
