cms proberen te fixen

--- a/themes/simpel/layouts/_default/baseof.html
+++ b/themes/simpel/layouts/_default/baseof.html
@@ -13,5 +13,7 @@
   <footer>
     {{ partial "footer.html" . }}
   </footer>
+<!-- Include the script that builds the page and powers Decap CMS -->
+<script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </body>
 </html>
