--- a/themes/simpel/layouts/partials/head.html
+++ b/themes/simpel/layouts/partials/head.html
@@ -2,4 +2,6 @@
 <meta name="viewport" content="width=device-width">
 <title>{{ site.Title }}</title>
 <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
+<!-- Include the script that enables Netlify Identity on this page. -->
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<link href="public/admin/config.yml" type="text/yaml" rel="cms-config-url">
