update path to config???

--- a/themes/simpel/layouts/partials/head.html
+++ b/themes/simpel/layouts/partials/head.html
@@ -4,4 +4,4 @@
 <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 <!-- Include the script that enables Netlify Identity on this page. -->
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<link href="/public/admin/config.yml" type="text/yaml" rel="cms-config-url">
+<link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
