--- a/themes/simpel/layouts/_default/baseof.html
+++ b/themes/simpel/layouts/_default/baseof.html
@@ -14,6 +14,6 @@
     {{ partial "footer.html" . }}
   </footer>
 <!-- Include the script that builds the page and powers Decap CMS -->
-<script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+<!-- script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script-->
 </body>
 </html>
